<resources>
    <string name="app_name">WrumWrum</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">Maps</string>
    <string name="wallet">Wallet</string>
    <string name="history">History</string>
    <string name="rating">Rating</string>

    <string name="ok">Done</string>
    <string name="action_settings">Settings</string>
    <string name="login_failed">Login failed</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="activate">Activate</string>
    <string name="sms_code">SMS code</string>
    <string name="balance">Balance</string>
    <string name="log_out">LOG OUT</string>
    <string name="top_up">TOP UP</string>
    <string name="amount">Amount</string>
    <string name="card_number">Card Number</string>
    <string name="due_date">Due Date</string>
    <string name="cvv_cvc">CVV/CVC</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="travel_time">Time in travel:</string>
    <string name="unlock">Unlock scooter</string>
    <string name="finish">Finish rent</string>
    <string name="withdrawal_commission_info">WARNING! Withdrawal is carried out with a 5% commission</string>
    <string name="tariffs_warning">WARNING! When your chosen tariff will end your payment will switch to postpayment mode!</string>
    <string name="activation">We sent activation code to your Email</string>
    <string name="finish_rent_title">Your ride is finished!</string>
    <string name="finish_rent_time">Total time in travel:</string>
    <string name="finish_rent_price">Total price:</string>
    <string name="company_logo">Company logo</string>
    <string name="choose_scooter">Choose scooter</string>
    <string name="fuel_level">Fuel level</string>
    <string name="coordinates">Coordinates</string>
    <string name="some_scooter">Some scooter</string>
    <string name="scooter_number">Scooter number</string>
    <string name="getting_balance">Getting balance…</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="update_balance">Update balance</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_0">0 $</string>
    <string name="time_of_reservation">Left time of reservation:</string>
    <string name="your_points">Your points:</string>
    <string name="your_place">Your place:</string>
    <string name="username">Username</string>
</resources>
