<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/finish_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/finish_rent_title"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/scooter_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@id/finish_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/spend_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/finish_rent_time"
        app:layout_constraintTop_toTopOf="@id/scooter_img"
        app:layout_constraintStart_toEndOf="@id/scooter_img"/>

    <TextView
        android:id="@+id/spend_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:text="@string/_00_00_00"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@id/scooter_img"
        app:layout_constraintStart_toEndOf="@id/spend_time_title"/>

    <TextView
        android:id="@+id/spend_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/finish_rent_price"
        app:layout_constraintTop_toBottomOf="@id/spend_time_title"
        app:layout_constraintStart_toEndOf="@id/scooter_img"/>

    <TextView
        android:id="@+id/spend_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/_0"
        app:layout_constraintTop_toBottomOf="@id/spend_time_title"
        app:layout_constraintStart_toEndOf="@id/spend_price_title"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_green"
        android:textColor="@color/white"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@id/scooter_img"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>