<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingBottom="68dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="100dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:layout_constrainedWidth="@id/bottom_navigation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            android:paddingTop="4dp"
            app:layout_constraintBottom_toTopOf="@+id/rgTariffs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_scooter_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_scooter"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_scooter_fuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fuel_level"
                android:textColor="@color/jet"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_scooter_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coordinates"
                android:textColor="@color/jet"
                android:textSize="24sp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rgTariffs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/tariffs_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <TextView
            android:id="@+id/tariffs_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tariffs_warning"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgTariffs"
            android:textAlignment="center"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
